# Nexus-API-Core-

./: README.md  ROADMAP.md  build.gradle.kts  convert_to_astc.py  download_minecraft_jar.py  extensoes_GLES_complete.json  gerar_pack_astc.sh  gradle.properties  install_astcenc.sh  settings.gradle.kts
.github/workflows/: astc_textures.yml  build-and-generate-textures.yml  build-api.yml  build-maliopt.yml  build-native.yml  build-nefu.yml  build-render-hdr.yml  build-shadows.yml  build-streaming.yml  build-tdbr.yml  build-textures.yml  build.yml  engenhariasonora_astc.yml  generate-textures.yml
nexus-audio/: build.gradle.kts
nexus-audio/src/main/resources/: fabric.mod.json
nexus-maliopt/: build.gradle.kts
nexus-maliopt/src/main/resources/: fabric.mod.json  maliopt.mixins.json
nexus-modules/tdbr/: build.gradle.kts
nexus-native/: CMakeLists.txt
nexus-native/src/main/cpp/: nexus_mali_core.cpp
nexus-nefu/: build.gradle.kts
nexus-nefu/src/main/cpp/: CMakeLists.txt  nefu_core.cpp
nexus-nefu/src/main/cpp/ltw/: egl.h  query.c
nexus-nefu/src/main/cpp/ltw/glsl_optimizer/src/code/: ir_print_glsl_visitor.cpp
nexus-nefu/src/main/cpp/ltw/tinywrapper/: blending.c  egl.c  es3_extended.h
nexus-nefu/src/main/cpp/mobileglues/: CMakeLists.txt  buffer.cpp  buffer.h  drawing.h  framebuffer.cpp  gl.cpp  gles3.h  includes.h  init.cpp  main.cpp  program.h  shader.cpp  shader.h  version.h
nexus-nefu/src/main/cpp/mobileglues/config/: cJSON.c  cJSON.h  config.cpp  config.h  gpu_utils.cpp  gpu_utils.h  settings.cpp  settings.h
nexus-nefu/src/main/cpp/mobileglues/egl/: egl.cpp  egl.h  loader.cpp  loader.h
nexus-nefu/src/main/cpp/mobileglues/gl/: drawing.cpp  envvars.cpp  envvars.h  framebuffer.h  getter.cpp  getter.h  gl.h  gl_native.cpp  gl_stub.cpp  glcorearb.h  loader.h  log.cpp  log.h  mg.cpp  mg.h  multidraw.cpp  multidraw.h  pixel.cpp  pixel.h  program.cpp  random_string_gen.cpp  random_string_gen.h  texture.cpp  texture.h  vertexattrib.cpp  vertexattrib.h
nexus-nefu/src/main/cpp/mobileglues/gl/ExtWrappers/: DSAWrapper.cpp  DSAWrapper.h  MultiBindWrapper.cpp  MultiBindWrapper.h
nexus-nefu/src/main/cpp/mobileglues/gl/FSR1/: FSR1.cpp  FSR1.h  FSRShaderSource.h
nexus-nefu/src/main/cpp/mobileglues/gl/glsl/: cache.cpp  glsl_for_es.h
nexus-nefu/src/main/cpp/mobileglues/gles/: gles.h  loader.cpp  loader.h
nexus-nefu/src/main/cpp/mobileglues/glsl/: cache.h  glsl_for_es.cpp
nexus-nefu/src/main/cpp/mobileglues/glx/: lookup.cpp  lookup.h
nexus-nefu/src/main/cpp/mobileglues/scripts/: format_code.sh  update-source-file-header.py
nexus-nefu/src/main/cpp/mobileglues/shaders/: multidraw_compute.comp
nexus-nefu/src/main/resources/: fabric.mod.json  nexus-nefu.mixins.json
nexus-render-hdr/: build.gradle.kts
nexus-render-hdr/src/main/resources/: fabric.mod.json  nexus-render-hdr.mixins.json
nexus-shadows/: build.gradle.kts
nexus-shadows/src/main/resources/: fabric.mod.json  nexus-shadows.mixins.json
nexus-streaming/: build.gradle.kts
nexus-streaming/src/main/resources/: fabric.mod.json  nexus-streaming.mixins.json
nexus-tdbr/: build.gradle.kts  gradle.properties  settings.gradle.kts
nexus-tdbr-standalone/: settings.gradle.kts
nexus-tdbr-standalone/src/main/resources/: fabric.mod.json
nexus-tdbr/nexus-tdbr-standalone/: build.gradle.kts
nexus-tdbr/src/main/resources/: fabric.mod.json  mixin.nexus-tdbr.json
nexus-textures/: build.gradle.kts  gradle.properties  settings.gradle.kts
nexus-textures/src/client/resources/: nexus-textures.mixins.json
nexus-textures/src/main/resources/: fabric.mod.json  (+1 more)
src/client/resources/: nexus-api-core.client.mixins.json
src/main/resources/: extensions.json  extensoes_GLES_complete.json  extensoes_extra.json  extensoes_unicas_do_telemovel.txt  fabric.mod.json  nexus-api-core.accesswidener  nexus-api-core.mixins.json
(+5412 files in other folders)
